--- a/index.html
+++ b/index.html
@@ -131,11 +131,6 @@
                 </a>
             </li>
             <li>
-                <a href="http://stevenlyf428.github.io/archives/" title="Archive">
-                    <span>Archive</span>
-                </a>
-            </li>
-            <li>
                 <a href="https://stevenlyf428.gitbook.io/stevenlyf/" title="读书笔记">
                     <span>读书笔记</span>
                 </a>
@@ -166,6 +161,17 @@
     </a>
 </div>
 
+        <div class="buttons">
+            <a class="button" href="/archives" rel="noopener" title="Archive">
+                <span class="button-inner">Archive</span>
+            </a>
+            <a class="button" href="/categories" rel="noopener" title="Categories">
+                <span class="button-inner">Categories</span>
+            </a>
+            <a class="button" href="/tags" rel="noopener" title="Tags">
+                <span class="button-inner">Tags</span>
+            </a>
+        </div>
     </div>
 </div>
 
