--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://stevenlyf428.github.io/about/" title="About">
-                    <span>About</span>
+                <a href="http://stevenlyf428.github.io/about/" title="关于我">
+                    <span>关于我</span>
                 </a>
             </li>
             <li>
-                <a href="https://stevenlyf428.gitbook.io/stevenlyf/" title="读书笔记">
-                    <span>读书笔记</span>
+                <a href="http://stevenlyf428.github.io/archives/" title="文章列表">
+                    <span>文章列表</span>
                 </a>
             </li>
         </ul>
@@ -162,14 +162,11 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="/archives" rel="noopener" title="Archive">
-                <span class="button-inner">Archive</span>
+            <a class="button" href="" rel="noopener" title="文章列表">
+                <span class="button-inner">文章列表</span>
             </a>
-            <a class="button" href="/categories" rel="noopener" title="Categories">
-                <span class="button-inner">Categories</span>
-            </a>
-            <a class="button" href="/tags" rel="noopener" title="Tags">
-                <span class="button-inner">Tags</span>
+            <a class="button" href="/tags" rel="noopener" title="标签">
+                <span class="button-inner">标签</span>
             </a>
         </div>
     </div>
@@ -177,7 +174,7 @@
 
     </main>
     <footer class="footer">
-    <span>&copy; 2021 <a href="http://stevenlyf428.github.io/">小飞的学习屋</a></span>
+    <span>&copy; 2022 <a href="http://stevenlyf428.github.io/">小飞的学习屋</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
